# venta-libre-rncp

./: .env.example  .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/db/: schema.sql
backend/src/: app.rs  auth_util.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs
backend/src/routes/: auth.rs  mod.rs
backend/src/util/: jwt.rs  mod.rs  password.rs  types.rs  uuid.rs
